###
###########################################
# CPM - Cartesian Partition Manager       #
#                                         #
# Copyright (C) 2012 University of Tokyo. #
###########################################
###

#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
#AC_INIT(CPMlib, 1.0.0, no-define)
AC_INIT(CPMlib, 1.0.0, , CPMlib)
AM_INIT_AUTOMAKE()
AC_CONFIG_SRCDIR([config.h.in])
AM_CONFIG_HEADER([config.h])

dnl
dnl setting default prefix
dnl
AC_PREFIX_DEFAULT(/usr/local/CPMlib)
if test "$prefix" = "NONE" ; then
  CPM_INST_DIR=/usr/local/CPMlib
else
  CPM_INST_DIR=$prefix
fi

dnl
dnl setting platform
dnl
CPM_DEVICE="$($SHELL ./cpm-uname)"
AC_SUBST(CPM_DEVICE)

dnl
dnl setting f77 compiler
dnl
#AC_ARG_VAR(F77, Fortran77 compiler command)
#AC_SUBST(F77)
#AC_ARG_VAR(F77FLAGS, Fortran77 compiler flags)
#AC_SUBST(F77FLAGS)

dnl
dnl setting f90 compiler
dnl
AC_ARG_VAR(F90, Fortran90 compiler command)
AC_SUBST(F90)
AC_ARG_VAR(F90FLAGS, Fortran90 compiler flags)
AC_SUBST(F90FLAGS)

dnl
dnl compiler libs
dnl
AC_ARG_WITH(comp, [  --with-comp=(INTEL|FJ)      Specify Compiler.],,
with_comp=none)
AC_SUBST(COMPILER_LIBS)
case "$with_comp" in
  "INTEL")
    COMPILER_LIBS="-lifport -lifcore"
    ;;
  "FJ")
    COMPILER_LIBS="--linkfortran"
    ;;
esac

enable_mpi="none"

dnl
dnl Setting MPICH environment
dnl
AC_ARG_WITH(mpich, [  --with-mpich=dir            Specify MPICH install directory.],,
with_mpich=none)
AC_SUBST(MPICH_DIR)
AC_SUBST(MPICH_CFLAGS)
AC_SUBST(MPICH_LDFLAGS)
AC_SUBST(MPICH_LIBS)
if test "$with_mpich" != "none" ; then
  MPICH_DIR=$with_mpich;
  MPICH_CFLAGS=-I$MPICH_DIR/include
  MPICH_LDFLAGS=-L$MPICH_DIR/lib
  enable_mpi="mpich"
fi

dnl
dnl Setting OpenMPI environment
dnl
if test "$with_mpich" = "none" ; then
  AC_ARG_WITH(ompi, [  --with-ompi=dir             Specify OpenMPI install directory.],,
  with_ompi=none)
  AC_SUBST(MPICH_DIR)
  AC_SUBST(MPICH_CFLAGS)
  AC_SUBST(MPICH_LDFLAGS)
  AC_SUBST(MPICH_LIBS)
  if test "$with_ompi" != "none" ; then
    MPICH_DIR=$with_ompi;
    MPICH_CFLAGS=-I$MPICH_DIR/include
    MPICH_LDFLAGS=-L$MPICH_DIR/lib
    enable_mpi="ompi"
  fi
fi

dnl
dnl check MPI library setting
dnl
#if test "$enable_mpi" = "none" ; then
#  echo "  Error: MPI library not specified."
#  echo "         set --with-mpich or --with-ompi option"
#  exit 1
#fi

dnl
dnl Setting TextParser environment
dnl
AC_ARG_WITH(parser, [  --with-parser=dir           Specify TextParser install directory.],,
with_parser=none)
AC_SUBST(TP_DIR)
AC_SUBST(TP_CFLAGS)
AC_SUBST(TP_LDFLAGS)
AC_SUBST(TP_LIBS)
if test "$with_parser" != "none" ; then
  TP_DIR=$with_parser;
  TP_CFLAGS=-I$TP_DIR/include
  TP_LDFLAGS=-L$TP_DIR/lib
#  TP_LIBS=-lTextParser
  TP_LIBS=$TP_DIR/lib/libTextParser.a
else
  echo "  Error: TextParser library not specified."
  echo "         set --with-parser option"
  exit 1
fi

dnl
dnl std c++ library for Fortran90 program
dnl
AC_SUBST(CPM_F90LIBS)
CPM_F90LIBS="-lstdc++"

dnl
dnl Setting MPI Library
dnl
if test "$with_comp" = "FJ" ; then
      MPICH_LIBS=""
elif test "$enable_mpi" = "mpich" ; then
  case "$CPM_DEVICE" in
    "Leopard")
      MPICH_LIBS="-lmpich -lpmpich"
      ;;
    "Tiger_Intel")
      MPICH_LIBS="-lmpich -lpmpich"
      ;;
    "Tiger_PPC")
      MPICH_LIBS="-lmpich -lpmpich"
      ;;
    "Panther")
      MPICH_LIBS="-lmpich -lpmpich"
      ;;
    *)
      MPICH_LIBS="-lmpich"
      ;;
  esac
elif test "$enable_mpi" = "ompi" ; then
  MPICH_LIBS="-lmpi"
  CPM_F90LIBS="$CPM_F90LIBS"" -lmpi_f77"
  case "$CPM_DEVICE" in
    "Leopard")
      MPICH_LIBS="-lmpi -lmpi_cxx"
      ;;
    "Tiger_Intel")
      MPICH_LIBS="-lmpi -lmpi_cxx"
      ;;
    "Tiger_PPC")
      MPICH_LIBS="-lmpi -lmpi_cxx"
      ;;
    "Panther")
      MPICH_LIBS="-lmpi -lmpi_cxx"
      ;;
    *)
      ;;
  esac
fi


dnl
dnl Setting REAL environment
dnl
AC_ARG_WITH(real, [  --with-real=(float|double)  Specify REAL size. default is float],,
with_real=float)
AC_SUBST(REALOPT)
AC_SUBST(FREALOPT)
if test "$with_real" = "double" ; then
  REALOPT=-D_REAL_IS_DOUBLE_
  if test "$with_comp" = "INTEL" ; then
    FREALOPT="-r8"
  elif test "$with_comp" = "FJ" ; then
    FREALOPT="-CcdRR8"
  fi
  F90FLAGS="$F90FLAGS"" $FREALOPT"
  FCFLAGS="$FCFLAGS"" $FREALOPT"
else
  REALOPT=
fi

dnl
dnl setting CPM special flags
dnl
CPM_CFLAGS="-I$CPM_INST_DIR/include"
AC_SUBST(CPM_CFLAGS)
CPM_LDFLAGS="-L$CPM_INST_DIR/lib"
AC_SUBST(CPM_LDFLAGS)
CPM_LIBS="-lcpmlib"
AC_SUBST(CPM_LIBS)

dnl
dnl Setting MAKE_SUB_DIRS
dnl
AC_SUBST(MAKE_SUB_DIRS)
MAKE_SUB_DIRS="src doc Examples/c++ Examples/f90"

# Checks for programs.
#AC_PROG_CC
AC_PROG_CXX
AC_PROG_FC
#AC_PROG_F77
AC_PROG_RANLIB

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h sys/time.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([gettimeofday memset])

AC_CONFIG_FILES([Makefile \
                 src/Makefile \
                 doc/Makefile \
                 Examples/c++/Makefile \
                 Examples/f90/Makefile \
                 cpm-config])
AC_OUTPUT

chmod +x ./cpm-config

